# bastion-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  bastion.toml  build.rs  docker-compose.mesh-e2e.yml  docker-compose.yml  installer.sh  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bastion/mobile-connect/: package-lock.json  package.json
docs/en/: README.md  adaptive-execution.md  architecture.md  channels.md  companion.md  configuration.md  control-plane-security.md  development.md  extensions.md  faq.md  getting-started.md  how-to-install.md  mobile-app.md  observability.md  personas.md  security.md  testing.md  vps-setup.md
docs/pt-br/: README.md  app-mobile.md  arquitetura.md  canais.md  como-instalar.md  companion.md  configuracao.md  configurando-a-vps.md  desenvolvimento.md  execucao-adaptativa.md  faq.md  iniciando.md  migracao-clawhub.md  personas.md  seguranca.md  testes.md
integrations/paperclip-adapter/: README.md
mobile/: README.md  pubspec.yaml
mobile/design/: shadow-monarch-mockup.html
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
paperclip-adapter/: Cargo.toml
paperclip-adapter/examples/: live_smoke.rs
paperclip-adapter/src/: types.rs
paperclip-adapter/tests/: adapter.rs
scripts/: bootstrap.sh  check-scope-and-scrub.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/bastion_control_plane/: __init__.py  client.py  idempotency.py  pagination.py  types.py  webhook.py
sdk/python/tests/: test_client.py  test_idempotency.py  test_pagination.py  test_webhook.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
skills/agentskills-install/: SKILL.md
skills/agentskills-publish/: SKILL.md
skills/bastion-calendar/: SKILL.md  __init__.py  manifest.json  models.py  parser.py
skills/bastion-pet-pack/: SKILL.md
skills/channel-scaffold/: SKILL.md
skills/crisis-mode/: SKILL.md  crisis_mode.py  manifest.json
skills/guardrails/: guardrails.py  manifest.json
skills/life-log/: SKILL.md  __init__.py  factory.py  life_log_cli.py  manifest.json
skills/memupalace/: .dockerignore  Dockerfile  NOTICE.md  __init__.py  embedder.py  factory.py  insight_cache.py  knowledge_graph.py  mcp_server.py  migrate_lifelog.py  models.py  query_sanitizer.py  requirements.txt  scorer.py  store.py
skills/mesh-connect/: SKILL.md
skills/mobile-connect/: SKILL.md  manifest.json
skills/onboarding/: SKILL.md  manifest.json  totp.py
skills/output-validator/: SKILL.md  manifest.json  pyproject.toml
skills/output-validator/output_validator/: __init__.py  alerts.py  auto_validator.py  cli.py  metrics_tracker.py  schema_extractor.py
skills/output-validator/tests/: conftest.py  test_alerts.py  test_auto_validator.py  test_integration.py  test_metrics_tracker.py  test_properties.py  test_schema_extractor.py
skills/persona-engine/: SKILL.md  manifest.json  persona_engine.py
skills/proactive-engine/: SKILL.md  __init__.py  conftest.py  engine.py  event_bus.py  factory.py  main.py  manifest.json  models.py  protocols.py  settings.py
skills/self-improving/: Dockerfile  SKILL.md  __init__.py  manifest.json  mcp_server.py  promotion.py
skills/skill-writer/: Dockerfile  SKILL.md  distiller.py  i18n.py  manifest.json  mcp_server.py  persona_activation.py  requirements.txt  skill_writer.py  test_security.py  versioning.py
skills/utils/: i18n.py  skill_loader.py
skills/voice/: .dockerignore  Dockerfile  __init__.py  mcp_server.py  requirements.txt
skills/weekly-review/: SKILL.md  manifest.json
skills/weight-system/: SKILL.md  manifest.json  weight_system.py
src/: agent_runtime_registry.rs  auth_profile_registry.rs  command_catalog.rs  companion_capability.rs  compose.rs  config.rs  config_store.rs  lib.rs  loadout.rs  main.rs  model_catalog.rs  observability.rs  product_import.rs  proposals.rs  routing.rs  secret.rs  tui.rs  update.rs  webapp.rs
src/adaptive/: browser.rs  delegate.rs  enqueue.rs  exec.rs  mod.rs  mode.rs  observer.rs  procedural.rs  schedule.rs
src/agent/: backend_command.rs  command.rs  credential_command.rs  extension_command.rs  mod.rs  proposal_command.rs  schedule_command.rs  skills.rs  task_command.rs
src/api/: infer.rs  mod.rs
src/channel/: discord.rs  email.rs  mod.rs  operational.rs  slack.rs  telegram.rs  voice.rs  webhook.rs  whatsapp.rs
src/control_plane/: business_state.rs  core_ops.rs  credential.rs  dto.rs  mcp_tools.rs  mod.rs  pagination.rs  routes.rs  scope.rs  translate.rs  webhook_delivery.rs  webhook_subscription.rs
src/extension/: cli_capability.rs  declarative.rs  facade.rs  host.rs  mcp_reconciler.rs  mod.rs  review.rs  subprocess.rs  ui.rs  wasm.rs
src/mcp/: mod.rs  server.rs
src/observability/: dashboard.html
src/tui/: companion.rs  visual.rs
tests/: agent_loop_public.rs  agent_runtime_backend_live.rs  agent_runtime_conformance.rs  agent_runtime_cross_turn_permission.rs  agent_runtime_delegated_task_live.rs  autocompact.rs  boot_local_and_hosted.rs  capability_registry.rs  characterization_boundary.rs  config_layering.rs  control_plane_credential_store.rs  control_plane_fixtures.rs  control_plane_routes.rs  extension_adversarial.rs  extension_reference_pack.rs  extension_subprocess.rs  extension_ui_adversarial.rs  external_agent_e2e.sh  fallback_egress_gate.rs  mcp_client_e2e.rs  mesh_e2e.sh  output_validator_memory.rs  prompt_cache_prefix.rs  provider_hotswap.rs  session_continuity.rs  skills_loader_yaml.rs  stigmergy_live.sh  stigmergy_mechanism.rs  test-installer.sh  tool_fidelity.rs
tests/eval/: mesh_seam2_eval.py
tests/evals/: mod.rs  spy_provider.rs
tests/mesh/: docker-compose.yml  run.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  ui.tsx
(+159 files in other folders)
