[package]
name = "bastion-paperclip-adapter"
version = "0.1.0"
edition = "2021"
description = "Proof-of-concept Paperclip <-> Bastion Control Plane adapter (heartbeat/poll/cancel over the public /v1/* HTTP API)."
publish = false

# Deliberately standalone (own Cargo.lock, not a member of the `bastion`
# package's build) — this crate exists to demonstrate that an external
# orchestrator can drive Bastion's durable Pursue tasks using ONLY the public
# `/v1/*` HTTP contract (`docs/en/contracts/control-plane-v1.openapi.yaml`),
# never Bastion's internal Rust types. Depending on the `bastion` crate here
# would defeat that point.
[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
wiremock = "0.6"
