[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "bastion-output-validator"
version = "1.0.0"
description = "Automatic output validation for Bastion skills"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "hypothesis>=6.0.0",
]
